@@ -1,9 +1,9 @@
 package com.like.hrm.duty.domain.model;
 
+import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import javax.persistence.AttributeOverride;
 import javax.persistence.AttributeOverrides;
@@ -18,24 +18,24 @@ import javax.persistence.OneToMany;
 import javax.persistence.Table;
 import javax.persistence.Transient;
 
+import org.hibernate.annotations.Comment;
+
 import com.like.hrm.duty.domain.model.vo.FamilyEvent;
 import com.like.system.core.domain.AuditEntity;
 import com.like.system.core.vo.LocalDatePeriod;
 
 import lombok.AccessLevel;
 import lombok.AllArgsConstructor;
-import lombok.Builder;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
+import lombok.ToString;
 
 /**
  * Aggregation Root
- *  
- * 근태시작일시 ~ 종료일시의 시간이 포함되려면 연속된 근태여야 함 </br>
- * 연속된 근태가 아닐 경우 DutyApplicationDate에서 구분이 불가능
- *  
- * @author CB457 
+ * 
+ * 근태신청 엔티티 
  */
+@ToString
 @AllArgsConstructor
 @NoArgsConstructor(access = AccessLevel.PROTECTED)
 @Getter
@@ -46,16 +46,19 @@ public class DutyApplication extends AuditEntity {
 	@Id		
 	@GeneratedValue(strategy = GenerationType.IDENTITY)
 	@Column(name="DUTY_ID", nullable = false)
-	private Long id;
+	Long id;
 	
+	@Comment("직원아이디")
 	@Column(name="STAFF_ID", nullable = false)
-	private String staffId;
+	String staffId;
 	
+	@Comment("근무코드")
 	@Column(name="DUTY_CODE", nullable = false)
-	private String dutyCode;
+	String dutyCode;
 	
+	@Comment("근무사유")
 	@Column(name="DUTY_REASON", nullable = false)
-	private String dutyReason;	
+	String dutyReason;	
 		
 	@AttributeOverrides({
 		@AttributeOverride(name = "from", column = @Column(name = "DUTY_FROM_DT")),
@@ -64,7 +67,7 @@ public class DutyApplication extends AuditEntity {
 	LocalDatePeriod period;
 		
 	@OneToMany(mappedBy = "dutyApplication", orphanRemoval = true, cascade = CascadeType.ALL)
-	List<DutyApplicationDate> selectedDate;
+	List<DutyApplicationDate> selectedDateList;
 	
 	@Embedded
 	FamilyEvent familyEvent;
@@ -72,64 +75,56 @@ public class DutyApplication extends AuditEntity {
 	@Transient
 	private List<DutyApplicationAttachedFile> fileList;
 	
-	public static DutyApplication of(String staffId
-									,String dutyCode
-									,String dutyReason
-									,LocalDatePeriod period
-									,List<LocalDate> selectedDate
-									,Double dutyTime) {
-		
-		DutyApplication newObj = new DutyApplication();
-		newObj.staffId = staffId;
-		newObj.dutyCode = dutyCode;
-		newObj.dutyReason = dutyReason;
-		newObj.period = period;		
-		
-		return newObj;
-	}
-		
 	public DutyApplication(String staffId
 						  ,String dutyCode
 						  ,String dutyReason
 						  ,LocalDatePeriod period						  
-						  ,List<LocalDate> selectedDate
-						  ,Double dutyTime) {
+						  ,List<LocalDate> selectedDateList
+						  ,BigDecimal dutyTime) {
 		this.staffId = staffId;
 		this.dutyCode = dutyCode;
 		this.dutyReason = dutyReason;
 		this.period = period;		
-		this.selectedDate = addApplicationDate(selectedDate, dutyTime);
+		this.selectedDateList = addApplicationDateList(selectedDateList, dutyTime);
 	}	
 	
 	public void modifyEntity(String dutyCode
 							,String dutyReason
 							,LocalDatePeriod period
-							,List<LocalDate> selectedDate) {
+							,List<LocalDate> selectedDate
+							,BigDecimal dutyTime) {
 		this.dutyCode = dutyCode;
 		this.dutyReason = dutyReason;
 		this.period = period;
 		
-		this.selectedDate.clear();
-		this.selectedDate = addApplicationDate(selectedDate, 8);
-	}
+		this.selectedDateList.clear();
+		this.selectedDateList = addApplicationDateList(selectedDate, dutyTime);
+	}	
 	
 	public void addFile(DutyApplicationAttachedFile file) {
 		this.fileList.add(file);
 	}
 	
 	public List<LocalDate> getSelectedDate() {
-		return this.selectedDate.stream().map(e -> e.getDate()).collect(Collectors.toList());
+		return this.selectedDateList.stream().map(e -> e.getDate()).toList();
 	}
 	
-	private List<DutyApplicationDate> addApplicationDate(List<LocalDate> dateList, double dutyTime) {
-		if (this.selectedDate == null)
-			this.selectedDate = new ArrayList<>();
+	public BigDecimal getSumDutyTime() {
+		BigDecimal sum = BigDecimal.ZERO;
+		
+		for (DutyApplicationDate dates : this.selectedDateList) sum = sum.add(dates.getDutyTime());
+					
+		return sum;
+	}
+	
+	private List<DutyApplicationDate> addApplicationDateList(List<LocalDate> dateList, BigDecimal dutyTime) {
+		if (this.selectedDateList == null) this.selectedDateList = new ArrayList<>();
 		
 		for (LocalDate date : dateList) {
-			this.selectedDate.add(new DutyApplicationDate(this, date, dutyTime));
-		}		
+			this.selectedDateList.add(new DutyApplicationDate(this, date, dutyTime));
+		}
 		
-		return this.selectedDate;
+		return this.selectedDateList;
 	}
 	
 }
